# checkup_work

./: .gitignore  README.md  analyze_activity.py  config.json  requirements.txt  setup_startup.bat  specification.md  startup_launcher.vbs
analy/: analyze_activity.py  launch_analyzer.bat  setup_shortcut.bat  setup_shortcut.py
package/: install_and_run.bat  pyproject.toml  setup_shortcut.py
package/activity_analyzer/: __init__.py  __main__.py
src/: __init__.py  activity_monitor.py  browser_tracker.py  csv_logger.py  power_monitor.py  tray_icon.py  window_tracker.py
