[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "activity-analyzer"
version = "1.0.0"
description = "業務カテゴリ別 時間分析ツール"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
]

[project.scripts]
activity-analyzer = "activity_analyzer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["activity_analyzer*"]
